--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -26,14 +26,17 @@ html, body {
 }
 
 /* Uses a transparent header that draws on top of the layout's background */
-.ryoster-layout-transparent {
-  background: url('../images/common/transparent.jpg') center / cover;
+.origin-layout-transparent {
+  /*background: url('../images/common/transparent.jpg') center / cover;*/
 }
-.ryoster-layout-transparent .mdl-layout__header,
-.ryoster-layout-transparent .mdl-layout__drawer-button {
+.origin-layout-transparent .mdl-layout__header {
+  /*height: auto;*/
+}
+.origin-layout-transparent .mdl-layout__header,
+.origin-layout-transparent .mdl-layout__drawer-button {
   /* This background is dark, so we set text to white. Use 87% black instead if
      your background is light. */
-  color: white;
+  /*color: white;*/
 }
 .article-image {
     width: 100%;
@@ -41,172 +44,196 @@ html, body {
 }
 
 
-.mdl-demo .mdl-layout__header-row {
+.mdl-origin .mdl-layout__header-row {
   padding-left: 40px;
 }
-.mdl-demo .mdl-layout.is-small-screen .mdl-layout__header-row h3 {
+.mdl-origin .mdl-layout__header-row .mdl-layout-title {
+  color: #2196F3 !important;
+  text-decoration: none;
+}
+.mdl-origin .mdl-layout.is-small-screen .mdl-layout__header-row h3 {
   font-size: inherit;
 }
-.mdl-demo .mdl-layout__tab-bar-button {
+.mdl-origin .mdl-layout__header-row .mdl-navigation a {
+  color: #2196F3 !important;
+}
+.mdl-origin .mdl-layout__tab-bar-button {
   display: none;
 }
-.mdl-demo .mdl-layout.is-small-screen .mdl-layout__tab-bar .mdl-button {
+.mdl-origin .mdl-layout.is-small-screen .mdl-layout__tab-bar .mdl-button {
   display: none;
 }
-.mdl-demo .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar,
-.mdl-demo .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar-container {
+.mdl-origin .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar,
+.mdl-origin .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar-container {
   overflow: visible;
 }
-.mdl-demo .mdl-layout__tab-bar-container {
+.mdl-origin .mdl-layout__tab-bar-container {
   height: 64px;
 }
-.mdl-demo .mdl-layout__tab-bar {
+.mdl-origin .mdl-layout__tab-bar {
   padding: 0;
   padding-left: 16px;
   box-sizing: border-box;
   height: 100%;
   width: 100%;
 }
-.mdl-demo .mdl-layout__tab-bar .mdl-layout__tab {
+.mdl-origin .mdl-layout__tab-bar .mdl-layout__tab {
   height: 64px;
   line-height: 64px;
 }
-.mdl-demo .mdl-layout__tab-bar .mdl-layout__tab.is-active::after {
+.mdl-origin .mdl-layout__tab-bar .mdl-layout__tab.is-active::after {
   background-color: white;
   height: 4px;
 }
-.mdl-demo main > .mdl-layout__tab-panel {
+.mdl-origin main > .section--center {
   padding: 8px;
   padding-top: 48px;
 }
-.mdl-demo .mdl-card {
+.mdl-origin .mdl-card {
   height: auto;
   display: flex;
   flex-direction: column;
 }
-.mdl-demo .mdl-card > * {
+.mdl-origin .mdl-card > * {
   height: auto;
 }
-.mdl-demo .mdl-card .mdl-card__supporting-text {
+.mdl-origin .mdl-card .mdl-card__supporting-text {
   margin: 40px;
   flex-grow: 1;
   padding: 0;
   color: inherit;
   width: calc(100% - 80px);
 }
-.mdl-demo.mdl-demo .mdl-card__supporting-text h4 {
+.mdl-origin.mdl-origin .mdl-card__supporting-text h4 {
   margin-top: 0;
   margin-bottom: 20px;
 }
-.mdl-demo .mdl-card__actions {
+.mdl-origin .mdl-card__actions {
   margin: 0;
   padding: 4px 40px;
   color: inherit;
 }
-.mdl-demo .mdl-card__actions a {
+.mdl-origin .mdl-card__actions a {
   color: #00BCD4;
   margin: 0;
 }
-.mdl-demo .mdl-card__actions a:hover,
-.mdl-demo .mdl-card__actions a:active {
+.mdl-origin .mdl-card__actions a:hover,
+.mdl-origin .mdl-card__actions a:active {
   color: inherit;
   background-color: transparent;
 }
-.mdl-demo .mdl-card__supporting-text + .mdl-card__actions {
+.mdl-origin .mdl-card__supporting-text + .mdl-card__actions {
   border-top: 1px solid rgba(0, 0, 0, 0.12);
 }
-.mdl-demo #add {
+.mdl-origin #add {
   position: absolute;
   right: 40px;
   top: 36px;
   z-index: 999;
 }
 
-.mdl-demo .mdl-layout__content section:not(:last-of-type) {
+.origin-content {
+  max-width: 900px;
+  padding: 80px 0;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  margin: 0 auto;
+  -webkit-flex-shrink: 0;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+}
+
+.mdl-origin .mdl-layout__content section:not(:last-of-type) {
   position: relative;
   margin-bottom: 48px;
 }
-.mdl-demo section.section--center {
+.mdl-origin section.section--center {
   max-width: 860px;
 }
-.mdl-demo #features section.section--center {
+.mdl-origin #features section.section--center {
   max-width: 620px;
 }
-.mdl-demo section > header{
+.mdl-origin section > header{
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.mdl-demo section > .section__play-btn {
+.mdl-origin section > .section__play-btn {
   min-height: 200px;
 }
-.mdl-demo section > header > .material-icons {
+.mdl-origin section > header > .material-icons {
   font-size: 3rem;
 }
-.mdl-demo section > button {
+.mdl-origin section > button {
   position: absolute;
   z-index: 99;
   top: 8px;
   right: 8px;
 }
-.mdl-demo section .section__circle {
+.mdl-origin section .section__circle {
   display: flex;
   align-items: center;
   justify-content: flex-start;
   flex-grow: 0;
   flex-shrink: 1;
 }
-.mdl-demo section .section__text {
+.mdl-origin section .section__text {
   flex-grow: 1;
   flex-shrink: 0;
   padding-top: 8px;
 }
-.mdl-demo section .section__text h5 {
+.mdl-origin section .section__text h5 {
   font-size: inherit;
   margin: 0;
   margin-bottom: 0.5em;
 }
-.mdl-demo section .section__text a {
+.mdl-origin section .section__text a {
   text-decoration: none;
 }
-.mdl-demo section .section__circle-container > .section__circle-container__circle {
+.mdl-origin section .section__circle-container > .section__circle-container__circle {
   width: 64px;
   height: 64px;
   border-radius: 32px;
   margin: 8px 0;
 }
-.mdl-demo section.section--footer .section__circle--big {
+.mdl-origin section .section__circle-container > .section__circle-container__circle i {
+  padding: 20px;
+  color: #ffffff;
+}
+.mdl-origin section.section--footer .section__circle--big {
   width: 100px;
   height: 100px;
   border-radius: 50px;
   margin: 8px 32px;
 }
-.mdl-demo .is-small-screen section.section--footer .section__circle--big {
+.mdl-origin .is-small-screen section.section--footer .section__circle--big {
   width: 50px;
   height: 50px;
   border-radius: 25px;
   margin: 8px 16px;
 }
-.mdl-demo section.section--footer {
+.mdl-origin section.section--footer {
   padding: 64px 0;
   margin: 0 -8px -8px -8px;
 }
-.mdl-demo section.section--center .section__text:not(:last-child) {
+.mdl-origin section.section--center .section__text:not(:last-child) {
   border-bottom: 1px solid rgba(0,0,0,.13);
 }
-.mdl-demo .mdl-card .mdl-card__supporting-text > h3:first-child {
+.mdl-origin .mdl-card .mdl-card__supporting-text > h3:first-child {
   margin-bottom: 24px;
 }
-.mdl-demo .mdl-layout__tab-panel:not(#overview) {
+.mdl-origin .mdl-layout__tab-panel:not(#overview) {
   background-color: white;
 }
-.mdl-demo #features section {
+.mdl-origin #features section {
   margin-bottom: 72px;
 }
-.mdl-demo #features h4, #features h5 {
+.mdl-origin #features h4, #features h5 {
   margin-bottom: 16px;
 }
-.mdl-demo .toc {
+.mdl-origin .toc {
   border-left: 4px solid #C1EEF4;
   margin: 24px;
   padding: 0;
@@ -214,17 +241,21 @@ html, body {
   display: flex;
   flex-direction: column;
 }
-.mdl-demo .toc h4 {
+.mdl-origin .toc h4 {
   font-size: 0.9rem;
   margin-top: 0;
 }
-.mdl-demo .toc a {
+.mdl-origin .toc a {
   color: #4DD0E1;
   text-decoration: none;
   font-size: 16px;
   line-height: 28px;
   display: block;
 }
-.mdl-demo .mdl-menu__container {
+.mdl-origin .mdl-menu__container {
   z-index: 99;
+}
+.cd-read-more .material-icons {
+  margin: 0 0 0 8px;
+  font-size: 14px;
 }
